# anotador

./: CMakeLists.txt  baseDeDatos.db  mainwindow.cpp  mainwindow.h  mainwindow.ui  mydialog.cpp  mydialog.h  mydialog.ui
